# grimoire

./: CHANGELOG.md  LICENSE  README.md  context.example.yaml  grimoire.py  pyproject.toml  requirements.txt  sources.yaml  test_grimoire.py
.github/workflows/: ci.yml
custom/: example.md
data/: index.db  index_state.json
docs/: MCP_TUTORIAL.md  OFFLINE_BUNDLE.md  QUICKSTART.md  SECURITY.md
grimoire_app/: __init__.py  __main__.py  config.py  context.py  controller.py  converters.py  mcp.py  model.py  runner.py  sources.default.yaml  view.py
grimoire_app/converters/: json_cve.py
grimoire_app/file_converters/: __init__.py  ipynb.py  json_cve.py  pdf.py  yaml.py
grimoire_app/web/: index.html
research/hybrid-search-infra/: REPORT.md  fields.yaml  outline.yaml
research/hybrid-search-infra/results/: LanceDB.json  Qdrant.json  SQLite_FTS5_plus_sqlite-vec.json  Tantivy.json  Weaviate.json  qmd.json
